# buff_backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  advertising_report_api.md  pyproject.toml
src/: main.py
src/api/routes/: __init__.py  bid_optimizer.py  campaign_groups.py  campaigns.py  connections.py  metadatas.py  reports.py
src/api/routes/examples/: campaigns.py
src/core/: config.py  security.py  supabase.py
src/models/: connections.py  enums.py
src/models/schemas/: __init__.py  amazon_ads.py  campaign_groups.py
src/services/: amazon_ads.py  campaign_groups.py  report_processor.py
