[tool.poetry]
name = "buff-backend"
version = "0.1.0"
description = "Buff Backend"
authors = ["uncleben006"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
python-dotenv = ">=1.1.0,<2.0.0"
supabase = ">=2.15.0,<3.0.0"
cryptography = "^42.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
